feat: Create live-detail page

--- a/src/app/components/user-pages/landing/landing.component.less
+++ b/src/app/components/user-pages/landing/landing.component.less
@@ -121,7 +121,6 @@
 .live-game,
 .live-user {
     font-size: 0.8rem;
-    color: rgba(255, 255, 255, 0.8);
 }
 .live-title,
 .live-user,
@@ -180,6 +179,7 @@
     font-size: 0.8rem;
     position: absolute;
     left: 10px;
+    color: rgb(243, 242, 242);
 }
 .live-icon {
     background: #e21212;
