--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -3,19 +3,14 @@
         <section id="featured">
             <div class="main">
                 <div class="live-image">
-                    <img
-                        src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg"
-                        alt="Gameplay"
-                    />
+                    <img src="https://i.ytimg.com/vi/_TxsZiK8hVc/maxresdefault.jpg" alt="Gameplay" />
                     <div class="live-icon">LIVE</div>
                 </div>
                 <div class="featured-info">
                     <div class="header">
                         <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1542103749-8ef59b94f47e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="Profile"
-                            />
+                            <img src="https://images.unsplash.com/photo-1542103749-8ef59b94f47e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+                                alt="Profile" />
                         </div>
                         <div class="info-section">
                             <p class="featured-name">HelloWorld!</p>
@@ -37,49 +32,31 @@
             <div class="left1">
                 <div class="featured-content">
                     <i class="bi bi-chevron-left"></i>
-                    <img
-                        src="https://images.unsplash.com/photo-1450609283058-0ec52fa7eac4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Channel"
-                        class="featured-channel"
-                    />
+                    <img src="https://images.unsplash.com/photo-1450609283058-0ec52fa7eac4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                        alt="Channel" class="featured-channel" />
                 </div>
             </div>
             <div class="left2">
                 <div class="featured-content">
-                    <img
-                        src="https://i.ytimg.com/vi/eLQGVkuv8oo/maxresdefault.jpg"
-                        alt="Gameplay"
-                        class="featured-gameplay"
-                    />
-                    <img
-                        src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
-                        alt="Channel"
-                        class="featured-channel"
-                    />
+                    <img src="https://i.ytimg.com/vi/eLQGVkuv8oo/maxresdefault.jpg" alt="Gameplay"
+                        class="featured-gameplay" />
+                    <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
+                        alt="Channel" class="featured-channel" />
                 </div>
             </div>
             <div class="right2">
                 <div class="featured-content">
-                    <img
-                        src="https://i0.wp.com/coin-drop.com/wp-content/uploads/Dying-Light-2-1-1.png?resize=1400%2C791"
-                        alt="Gameplay"
-                        class="featured-gameplay"
-                    />
-                    <img
-                        src="https://images.unsplash.com/photo-1530268729831-4b0b9e170218?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Channel"
-                        class="featured-channel"
-                    />
+                    <img src="https://i0.wp.com/coin-drop.com/wp-content/uploads/Dying-Light-2-1-1.png?resize=1400%2C791"
+                        alt="Gameplay" class="featured-gameplay" />
+                    <img src="https://images.unsplash.com/photo-1530268729831-4b0b9e170218?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                        alt="Channel" class="featured-channel" />
                 </div>
             </div>
             <div class="right1">
                 <div class="featured-content">
                     <i class="bi bi-chevron-right"></i>
-                    <img
-                        src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                        alt="Channel"
-                        class="featured-channel"
-                    />
+                    <img src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                        alt="Channel" class="featured-channel" />
                 </div>
             </div>
         </section>
@@ -89,50 +66,14 @@
                 <div class="live-channel">
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
-                        <div class="live-views">81 viewers</div>
-                        <img
-                            src="https://i.ytimg.com/vi/jSdIUQ_iHtI/maxresdefault.jpg"
-                            alt="Gameplay"
-                            class="thumbnail"
-                        />
-                    </div>
-                    <div class="live-info">
-                        <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1458071103673-6a6e4c4a3413?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="Profile Image"
-                            />
-                        </div>
-                        <div class="live-text">
-                            <p class="live-title">Overwatch Awesomeness</p>
-                            <p class="live-user">Ganiman</p>
-                            <p class="live-game">Overwatch</p>
-                            <span class="live-lang">English</span>
-                            <span class="live-lang">Multiplayer</span>
-                        </div>
-                        <div class="live-dots">
-                            <div class="rec-live-dot"></div>
-                            <div class="rec-live-dot"></div>
-                            <div class="rec-live-dot"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="live-channel">
-                    <div class="live-image">
-                        <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
-                        <img
-                            src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg"
-                            alt="Gameplay"
-                            class="thumbnail"
-                        />
+                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                            class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                alt="Profile img"
-                            />
+                            <img src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="Profile img" />
                         </div>
                         <div class="live-text">
                             <p class="live-title">Let's Loot!</p>
@@ -150,54 +91,19 @@
                 <div class="live-channel">
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
-                        <div class="live-views">18 viewers</div>
-                        <img
-                            src="https://i.ytimg.com/vi/B6z7Tf4f8zM/maxresdefault.jpg"
-                            alt="Gameplay"
-                            class="thumbnail"
-                        />
+                        <div class="live-views">8.2k viewers</div>
+                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                            class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1508285296015-c0b524447532?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                alt="Profile Picture"
-                            />
+                            <img src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Wie Geht's?</p>
-                            <p class="live-user">Mixxie</p>
-                            <p class="live-game">Silent Hill</p>
-                            <span class="live-lang">German</span>
-                        </div>
-                        <div class="live-dots">
-                            <div class="rec-live-dot"></div>
-                            <div class="rec-live-dot"></div>
-                            <div class="rec-live-dot"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="live-channel">
-                    <div class="live-image">
-                        <div class="live-icon">LIVE</div>
-                        <div class="live-views">837 viewers</div>
-                        <img
-                            src="https://www.bing.com/th?id=OIP.6OEcyAWwAhZIB7a1fhTzNgHaEK&w=300&h=168&c=7&o=5&dpr=1.25&pid=1.7"
-                            alt="Gameplay"
-                            class="thumbnail"
-                        />
-                    </div>
-                    <div class="live-info">
-                        <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1504593811423-6dd665756598?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                alt="Profile Image"
-                            />
-                        </div>
-                        <div class="live-text">
-                            <p class="live-title">Shooty Shooty</p>
-                            <p class="live-user">BioGuy</p>
-                            <p class="live-game">Call of Duty</p>
+                            <p class="live-title">Let's Loot!</p>
+                            <p class="live-user">Dynamo</p>
+                            <p class="live-game">Dead Island 2</p>
                             <span class="live-lang">English</span>
                         </div>
                         <div class="live-dots">
@@ -210,24 +116,69 @@
                 <div class="live-channel">
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
-                        <div class="live-views">21k viewers</div>
-                        <img
-                            src="https://wallpapershome.com/images/wallpapers/anthem-2560x1440-4k-screenshot-gameplay-e3-2017-13824.jpg"
-                            alt="Gameplay"
-                            class="thumbnail"
-                        />
+                        <div class="live-views">8.2k viewers</div>
+                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                            class="thumbnail" />
                     </div>
                     <div class="live-info">
                         <div class="img-cropper">
-                            <img
-                                src="https://images.unsplash.com/photo-1544098485-2a2ed6da40ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                                alt="Profile Img"
-                            />
+                            <img src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="Profile img" />
                         </div>
                         <div class="live-text">
-                            <p class="live-title">Don't *Beep* With Me!</p>
-                            <p class="live-user">UmbraCrow</p>
-                            <p class="live-game">Anthem</p>
+                            <p class="live-title">Let's Loot!</p>
+                            <p class="live-user">Dynamo</p>
+                            <p class="live-game">Dead Island 2</p>
+                            <span class="live-lang">English</span>
+                        </div>
+                        <div class="live-dots">
+                            <div class="rec-live-dot"></div>
+                            <div class="rec-live-dot"></div>
+                            <div class="rec-live-dot"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-channel">
+                    <div class="live-image">
+                        <div class="live-icon">LIVE</div>
+                        <div class="live-views">8.2k viewers</div>
+                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                            class="thumbnail" />
+                    </div>
+                    <div class="live-info">
+                        <div class="img-cropper">
+                            <img src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="Profile img" />
+                        </div>
+                        <div class="live-text">
+                            <p class="live-title">Let's Loot!</p>
+                            <p class="live-user">Dynamo</p>
+                            <p class="live-game">Dead Island 2</p>
+                            <span class="live-lang">English</span>
+                        </div>
+                        <div class="live-dots">
+                            <div class="rec-live-dot"></div>
+                            <div class="rec-live-dot"></div>
+                            <div class="rec-live-dot"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="live-channel">
+                    <div class="live-image">
+                        <div class="live-icon">LIVE</div>
+                        <div class="live-views">8.2k viewers</div>
+                        <img src="http://i.ytimg.com/vi/eurXJnfsfhs/maxresdefault.jpg" alt="Gameplay"
+                            class="thumbnail" />
+                    </div>
+                    <div class="live-info">
+                        <div class="img-cropper">
+                            <img src="https://images.unsplash.com/photo-1474260295919-57362ec1d17c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="Profile img" />
+                        </div>
+                        <div class="live-text">
+                            <p class="live-title">Let's Loot!</p>
+                            <p class="live-user">Dynamo</p>
+                            <p class="live-game">Dead Island 2</p>
                             <span class="live-lang">English</span>
                         </div>
                         <div class="live-dots">
