feat: add live detail page

--- a/src/app/components/user-pages/landing/landing.component.html
+++ b/src/app/components/user-pages/landing/landing.component.html
@@ -63,7 +63,7 @@
         <h2>Recommended live channels</h2>
         <section class="recommended-live">
             <div id="live-channels">
-                <div class="live-channel">
+                <div class="live-channel" (click)="onLiveClick(123)">
                     <div class="live-image">
                         <div class="live-icon">LIVE</div>
                         <div class="live-views">8.2k viewers</div>
